--- a/index.css
+++ b/index.css
@@ -33,11 +33,11 @@ nav li {
 
 nav a {
     text-decoration: none;
-    color: #EEEEEE;
+    color: #27272c;
 }
 
 nav a:hover {
-    color: #818080;
+    color: #EEEEEE;
 }
 
  nav li:hover {
@@ -79,7 +79,7 @@ main p {
 }
 
 main a, footer a {
-    color: #00ADB5;
+    color: #04f5ff;
 }
 
 main a:hover, footer a:hover {
