--- a/projects/projects.css
+++ b/projects/projects.css
@@ -33,11 +33,11 @@ nav li {
 
 nav a {
     text-decoration: none;
-    color: #EEEEEE;
+    color: #27272c;
 }
 
 nav a:hover {
-    color: #818080;
+    color: #EEEEEE;
 }
 
 nav li:hover {
@@ -199,7 +199,7 @@ footer {
 }
 
 footer a {
-    color: #00ADB5;
+    color: #04f5ff;
 }
 
 footer a:hover {
@@ -263,7 +263,7 @@ footer a:hover {
     button {
         width: 6vw;
         height: 6vw;
-        margin: 0.5vh auto;
+        margin: 0.5vw auto;
     }
 
     #clear {
